# ralph-research

./: .gitignore  DECISION_POLICY.md  DEFERRED.md  ONE_LINER.md  README.md  RESEARCH_SPEC.md  config.yml  pyproject.toml  ralph  references.bib
data/: data_manifest.lock.json
docs/: index.html
ralph_core/: __init__.py  bootstrap.py  cli.py  envs.py  guards.py  preflight.py  recovery.py  resolver.py  schemas.py  spec_lint.py  state.py  supervisor.py
spec-bundle/: BUNDLE_MANIFEST.json  README.md  SHA256SUMS.txt  research-ralph-implementation-spec-v4.1-lean.md
spec-bundle/paperfigure/: companion-tree.lock.json  source.lock.json
spec-bundle/schema/: core-v4.1-lean.sql  worker-result.schema.json
spec-bundle/validation/: validation.json
statistics/: statistical_protocol.lock.json
submissions/ralphthon-icml-track1/: MANIFEST.sha256  analysis_dev.json  grade.json  report.md
submissions/ralphthon-icml-track1-polished/: QA_REPORT.md  REVISION_NOTES.md  numbers.tex  paper.tex  references.bib
submissions/ralphthon-icml-track1/paper/: numbers.tex  paper.tex  references.bib  submission_metadata.md
submissions/ralphthon-icml-track1/raw/: meta.json  (+6 more)
tests/: conftest.py  test_active_lock.py  test_cli_surface.py  test_command_guard.py  test_control_channel.py  test_env_allowlist.py  test_model_resolver.py  test_path_guard.py  test_preflight.py  test_recovery.py  test_repo_bootstrap.py  test_result_ingest.py  test_schemas.py  test_spec_lint.py  test_venue_check.py  test_wal_probe.py
tests/fakes/: fake_seams.py  fake_worker.py
venue/: check.py  venue_profile.lock.yml
(+3 files in other folders)
