[project]
name = "ralph-core"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "pydantic>=2.7",
  "jsonschema>=4.21",
  "click>=8.1",
  "pyyaml>=6.0",
  "jinja2>=3.1",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-timeout>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ralph_core"]
